--- a/Index.html
+++ b/Index.html
@@ -1,130 +1,133 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Computer Software Engineering Technology</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto+Mono" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>Computer Software Engineering Technology</title>
+	<link rel="stylesheet" href="style.css" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto+Mono" rel="stylesheet">
 </head>
 <body>
-  <header class="site-header">
-    <nav class="header-nav">
-      <ul class="nav-links">
-        <li>
-          <a class="nav-links" href="#about-the-program">About the Program</a>
-        </li>
-        <span>/</span>
-        <li>
-          <a href="#schedule-and-objectives" class="nav-links">Schedule &amp; Objectives</a>
-        </li>
-        <span>/</span>
-        <li>
-          <a href="#current-students" class="nav-links">Current Students</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+	<header class="site-header">
+		<div class="topbar">
+			<img src="/">
+		</div>
+		<nav class="header-nav">
+			<ul class="nav-links">
+				<li>
+					<a class="nav-links" href="#about-the-program">About the Program</a>
+				</li>
+				<span>/</span>
+				<li>
+					<a href="#schedule-and-objectives" class="nav-links">Schedule &amp; Objectives</a>
+				</li>
+				<span>/</span>
+				<li>
+					<a href="#current-students" class="nav-links">Current Students</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
-  <section class="hero">
-    <h3 class="subheading">September 2017</h3>
-    <h1 class="hero-heading">Diving into Computer Software Engineering</h1>
-  </section>
+	<section class="hero">
+		<h3 class="subheading">September 2017</h3>
+		<h1 class="hero-heading">Diving into Computer Software Engineering</h1>
+	</section>
 
-  <section class="background-bod">
-    <article class="the-abs">
-      <h2 class="content-header">CSET at Thaddeus Stevens College of Technology</h2>
-      <p class="mono">The Computer Software Engineering Technology program prepares students to design, develop, and build customized software programs for specific applications.</p>
-      <div class="flex-row">
-      <p class="george">Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.</p>
-      <p class="george">Upon completion of the program, graduates will find a wealth of employment opportunities in a variety of businesses and industries. Unlike some disciplines which are tied directly to a specific technical area, graduates of this program will work in small businesses, large industries, private organizations, software specialty businesses, IT Department, Government, and other agencies.</p>
-    </div>
-    </article>
-  </section>
+	<section class="background-bod">
+		<article class="the-abs">
+			<h2 class="content-header">CSET at Thaddeus Stevens College of Technology</h2>
+			<p class="mono">The Computer Software Engineering Technology program prepares students to design, develop, and build customized software programs for specific applications.</p>
+			<div class="flex-row">
+				<p class="george">Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.</p>
+				<p class="george">Upon completion of the program, graduates will find a wealth of employment opportunities in a variety of businesses and industries. Unlike some disciplines which are tied directly to a specific technical area, graduates of this program will work in small businesses, large industries, private organizations, software specialty businesses, IT Department, Government, and other agencies.</p>
+			</div>
+		</article>
+	</section>
 
-  <section class="thirds">
-    <aside class="abeground">
-      <h2 class="content-header">Program Objectives:</h2>
-      <p class="mono">A graduate of this program will be able to do the following:</p>
-      <ul class="objectives">
-        <li class="mono">Edit and modify existing software programs with the aim of upgading and correcting errors.</li>
-        <li class="mono">Improve the performance of software programs, or adapt it to new and old hardware and software.</li>
-        <li class="mono">Analyze the needs of users for product design.</li>
-        <li class="mono">Design and modify software systems for specific applications</li>
-        <li class="mono">Analyze and recommend all necessary system layouts and modifications</li>
-        <li class="mono">Train users how to make use of new software</li>
-      </ul>
-    </aside>
-      <article class="schedule">
-        <h2 class="content-header">Model Schedule</h2>
-        <h4 class="content-header small-header">Semester One</h4>
-        <ul>
-          <li class="mono">CSET 105 Intro to Web Applications 3
-            <li class="mono">CSET 110 Web Development I 3</li>
-            <li class="mono">CSET 115 Technical Requirements & Data Structures 3</li>
-            <li class="mono">CSET 120 Software Project I 3</li>
-            <li class="mono">MATH 137 Intermediate Algebra(or higher) 3</li>
-            <li class="mono">ENG 106 English Composition 3</li>
-          </ul>
-          <h4 class="content-header small-header">Semester Two</h4>
-          <ul>
-            <li class="mono">CSET 105 Intro to Web Applications 3
-              <li class="mono">CSET 110 Web Development I 3</li>
-              <li class="mono">CSET 115 Technical Requirements & Data Structures 3</li>
-              <li class="mono">CSET 120 Software Project I 3</li>
-              <li class="mono">MATH 137 Intermediate Algebra(or higher) 3</li>
-              <li class="mono">ENG 106 English Composition 3</li>
-            </ul>
-          <div class="schedule-block">
-            <a href="#first-year" class="mono">First Year</a>
-            <span class="mono">|</span>
-            <a href="#second-year" class="mono">Second Year</a>
-          </div>
-        </article>
-      </section>
+	<section class="thirds">
+		<aside class="abeground">
+			<h2 class="content-header">Program Objectives:</h2>
+			<p class="mono">A graduate of this program will be able to do the following:</p>
+			<ul class="objectives">
+				<li class="mono">Edit and modify existing software programs with the aim of upgading and correcting errors.</li>
+				<li class="mono">Improve the performance of software programs, or adapt it to new and old hardware and software.</li>
+				<li class="mono">Analyze the needs of users for product design.</li>
+				<li class="mono">Design and modify software systems for specific applications</li>
+				<li class="mono">Analyze and recommend all necessary system layouts and modifications</li>
+				<li class="mono">Train users how to make use of new software</li>
+			</ul>
+		</aside>
+		<article class="schedule">
+			<h2 class="content-header">Model Schedule</h2>
+			<h4 class="content-header small-header">Semester One</h4>
+			<ul>
+				<li class="mono">CSET 105 Intro to Web Applications 3
+					<li class="mono">CSET 110 Web Development I 3</li>
+					<li class="mono">CSET 115 Technical Requirements & Data Structures 3</li>
+					<li class="mono">CSET 120 Software Project I 3</li>
+					<li class="mono">MATH 137 Intermediate Algebra(or higher) 3</li>
+					<li class="mono">ENG 106 English Composition 3</li>
+				</ul>
+				<h4 class="content-header small-header">Semester Two</h4>
+				<ul>
+					<li class="mono">CSET 105 Intro to Web Applications 3
+						<li class="mono">CSET 110 Web Development I 3</li>
+						<li class="mono">CSET 115 Technical Requirements & Data Structures 3</li>
+						<li class="mono">CSET 120 Software Project I 3</li>
+						<li class="mono">MATH 137 Intermediate Algebra(or higher) 3</li>
+						<li class="mono">ENG 106 English Composition 3</li>
+					</ul>
+					<div class="schedule-block">
+						<a href="#first-year" class="mono">First Year</a>
+						<span class="mono">|</span>
+						<a href="#second-year" class="mono">Second Year</a>
+					</div>
+				</article>
+			</section>
 
-      <section>
-      <h2 class="content-header">Current Students</h2>
-      <p class="george">Thaddeus Stevens is proud to showcase the first calss of students to enter the Computer Software Engineering Program</p>
+			<section>
+				<h2 class="content-header">Current Students</h2>
+				<p class="george">Thaddeus Stevens is proud to showcase the first calss of students to enter the Computer Software Engineering Program</p>
 
-      <div class="img-flex">
-      <img src="images/tiger.jpg">
-      <img src="images/bear.jpg">
-      <img src="images/monkey.jpg">
-      <img src="images/goat.jpg">
-      <img src="images/pupper.jpg">
-      <img src="images/hippo.jpg">
-      <img src="images/otter.jpg">
-      <img src="images/ox.jpg">
-      <img src="images/panda.jpg">
-      <img src="images/elephant.jpg">
-      <img src="images/penguin.jpg">
-      <img src="images/rat.jpg">
-      <img src="images/baboon.jpg">
-      <img src="images/racoon.jpg">
-      <img src="images/gorilla.jpg">
-    </div>
+				<div class="img-flex">
+					<img src="images/tiger.jpg">
+					<img src="images/bear.jpg">
+					<img src="images/monkey.jpg">
+					<img src="images/goat.jpg">
+					<img src="images/pupper.jpg">
+					<img src="images/hippo.jpg">
+					<img src="images/otter.jpg">
+					<img src="images/ox.jpg">
+					<img src="images/panda.jpg">
+					<img src="images/elephant.jpg">
+					<img src="images/penguin.jpg">
+					<img src="images/rat.jpg">
+					<img src="images/baboon.jpg">
+					<img src="images/racoon.jpg">
+					<img src="images/gorilla.jpg">
+				</div>
 
-    </section>
-    <footer>
-      <div class="gradient-bar">
-      </div>
-      <nav>
-        <ul class="nav-links">
-          <li>
-            <a class="nav-links mono" href="/about-us">About Thaddeus Stevens</a>
-          </li>
-          <span>/</span>
-          <li>
-            <a class="nav-links mono" href="/apply">Apply for 2018</a>
-          </li>
-          <span>/</span>
-          <li>
-            <a class="nav-links mono" href="/contact">Contact</a>
-          </li>
-        </ul>
-        <nav>
-          <p class="footer-copy mono"> &copy; Copyright 2017, Thaddeus Stevens College of Technology.</p>
-          <p class="footer-copy mono">All Rights Reserved</p>
-        </footer>
-      </body>
-      </html>
+			</section>
+			<footer>
+				<div class="gradient-bar">
+				</div>
+				<nav>
+					<ul class="nav-links">
+						<li>
+							<a class="nav-links mono" href="/about-us">About Thaddeus Stevens</a>
+						</li>
+						<span>/</span>
+						<li>
+							<a class="nav-links mono" href="/apply">Apply for 2018</a>
+						</li>
+						<span>/</span>
+						<li>
+							<a class="nav-links mono" href="/contact">Contact</a>
+						</li>
+					</ul>
+					<nav>
+						<p class="footer-copy mono"> &copy; Copyright 2017, Thaddeus Stevens College of Technology.</p>
+						<p class="footer-copy mono">All Rights Reserved</p>
+					</footer>
+				</body>
+				</html>
