--- a/Index.html
+++ b/Index.html
@@ -72,7 +72,7 @@
 				<ul>
 					<li class="mono">CSET 105 Intro to Web Applications 3
 						<li class="mono">CSET 110 Web Development I 3</li>
-						<li class="mono">CSET 115 Technical Requirements & Data Structures 3</li>
+						<li class="mono">CSET 115 Technical Requirements &amp; Data Structures 3</li>
 						<li class="mono">CSET 120 Software Project I 3</li>
 						<li class="mono">MATH 137 Intermediate Algebra(or higher) 3</li>
 						<li class="mono">ENG 106 English Composition 3</li>
