epic levels of memery is going on here

--- a/Index.html
+++ b/Index.html
@@ -105,6 +105,7 @@
 					<img src="images/baboon.jpg">
 					<img src="images/racoon.jpg">
 					<img src="images/gorilla.jpg">
+					<img class="suprise" src="images/suprisdoge2.gif">
 				</div>
 
 			</section>
