put logo in site

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
 	<header class="site-header">
 		<div class="topbar">
-			<img src="/">
+			<img src="images/logo.png">
 		</div>
 		<nav class="header-nav">
 			<ul class="nav-links">
